Fixed WooCommerce wide alignments (archive & single)
Replaced .novablocks-content with .nb-sidecar-area

++

--- a/src/scss/woocommerce/blocks/_grid.scss
+++ b/src/scss/woocommerce/blocks/_grid.scss
@@ -104,7 +104,6 @@
     .wc-block-grid__product-title {
         margin-top: var(--theme-spacing-smallest);
         margin-bottom: 0;
-        color: var(--sm-current-fg2-color);
         
         @include apply-font(heading-4);
         @include apply-font-properties;
