--- a/src/scss/woocommerce/pages/_cart.scss
+++ b/src/scss/woocommerce/pages/_cart.scss
@@ -19,7 +19,7 @@
     text-align: left !important;
   }
   
-  .novablocks-content > .woocommerce {
+  .nb-sidecar-area > .woocommerce {
     --block-content-start: ws !important;
     --block-content-end: we !important;
   }
