--- a/src/scss/woocommerce/pages/_checkout.scss
+++ b/src/scss/woocommerce/pages/_checkout.scss
@@ -234,7 +234,7 @@
     }
   }
   
-  .novablocks-content > .woocommerce {
+  .nb-sidecar-area > .woocommerce {
     --block-content-start: ws !important;
     --block-content-end: we !important;
   }
