--- a/src/scss/woocommerce/pages/_single-product.scss
+++ b/src/scss/woocommerce/pages/_single-product.scss
@@ -38,7 +38,7 @@
     }
   }
   
-  .novablocks-content {
+  .nb-sidecar-area {
   
     > .woocommerce-notices-wrapper,
     > .product {
